feat(itemtransfer): 实现仓库物品转移功能并优化日志记录
- 重命名 HoverTo 函数为 HoverOnto，改进悬停操作的语义表达
- 修复识别任务切片初始化大小，从固定大小8改为预分配容量32
- 添加悬停失败时的错误日志记录，便于问题排查
- 增强物品定位逻辑，添加详细的日志输出包括成功、失败和进行中的状态
- 注册itemtransfer模块到主服务中，使功能可被调用
- 更新中文本地化文本，优化仓库物品查找相关的用户提示信息
- 改进物品识别开始的日志消息，使其更加清晰明确

--- a/assets/misc/locales/zh_cn.json
+++ b/assets/misc/locales/zh_cn.json
@@ -74,8 +74,8 @@
     "option.TransferTimes.input.label": "转移次数",
     "option.TransferTimes.input.description": "“批量转移同类物品”填满背包的次数",
     "option.TransferTimes.input.error": "请输入非负整数",
-    "node.ItemTransferToBackpack.focus.recognition.starting": "开始从仓库中查找指定物品。任务 ID: {task_id}，子任务 ID:  {reco_id}",
-    "node.ItemTransferToBackpack.focus.recognition.succeeded": "已找到指定物品",
+    "node.ItemTransferToBackpack.focus.recognition.starting": "开始从仓库中查找指定物品",
+    "node.ItemTransferToBackpack.focus.recognition.succeeded": "已找到指定物品的位置",
     "node.ItemTransferToBackpack.focus.recognition.failed": "从仓库中查找物品时出错。可能是未找到指定物品",
     "contact.file": "misc/locales/CONTACT/CONTACT.zh_cn.md"
 }
