feat(itemtransfer): 添加仓库区域切换功能并优化坐标定义
- 重命名坐标常量为更明确的RepoFirstX、RepoFirstY、BackpackFirstX、BackpackFirstY
- 添加仓库标题区域坐标常量(RepoTitleX/Y/W/H)
- 恢复HoverOnto函数到正确位置
- 在interface.json中添加TransferOrigin和TransferDestination选项
- 添加地区本地化字符串(四号谷地、武陵)
- 添加区域切换相关的界面选项标签
- 添加区域切换节点的日志消息
- 添加新的图像资源文件用于区域切换识别
- 在ItemTransfer流程中加入区域切换逻辑和相关节点配置

--- a/assets/misc/locales/zh_cn.json
+++ b/assets/misc/locales/zh_cn.json
@@ -1,4 +1,6 @@
 {
+    "common.in-game.region.valley": "四号谷地",
+    "common.in-game.region.wuling": "武陵",
     "task.AndroidOpenGame.label": "🎮打开游戏",
     "task.AndroidOpenGame.description": "安卓端打开游戏，需先手动打开模拟器",
     "task.PCOpenGame.label": "🎮进入游戏",
@@ -68,6 +70,8 @@
     "option.ContainerContent.label": "内容物设置",
     "option.ContainerContent.input.label": "内容物",
     "option.ContainerContent.input.description": "待转移容器内的内容物名称",
+    "option.TransferOrigin.label": "起点",
+    "option.TransferDestination.label": "终点",
     "option.TransferAll.label": "手动停止",
     "option.TransferAll.description": "不设置自动停止次数，直到搬空或不满一背包为止",
     "option.TransferTimes.label": "次数设置",
@@ -80,5 +84,8 @@
     "node.ItemTransferToBackpack.focus.action.starting": "开始批量移动到背包",
     "node.ItemTransferToBackpack.focus.action.succeeded": "已批量移动到背包",
     "node.ItemTransferToBackpack.focus.action.failed": "批量移动到背包时出错",
+    "node.ItemTransferRegionSwitcherEntry.focus.action.succeeded": "已点击仓库切换键",
+    "node.ItemTransferRegionSwitcherConfirm.focus.action.succeeded": "已确认切换仓库",
+    "node.ItemTransferCloseRegionSwitcher.focus.action.succeeded": "已退出仓库切换页面",
     "contact.file": "misc/locales/CONTACT/CONTACT.zh_cn.md"
 }
