--- a/assets/misc/locales/zh_cn.json
+++ b/assets/misc/locales/zh_cn.json
@@ -84,12 +84,12 @@
     "node.ItemTransferToBackpack.focus.action.starting": "开始：批量移动到背包",
     "node.ItemTransferToBackpack.focus.action.succeeded": "完成：批量移动到背包",
     "node.ItemTransferToBackpack.focus.action.failed": "未能完成批量移动，批量移动到背包出错",
-    "node.ItemTransferRegionSwitcherEntry.focus.recognition.starting": "开始：识别仓库切换入口",
-    "node.ItemTransferRegionSwitcherEntry.focus.recognition.succeeded": "已找到仓库切换入口",
-    "node.ItemTransferRegionSwitcherEntry.focus.recognition.failed": "找不到仓库切换入口，这可能是正常的，如果任务卡在这里，请报告错误",
-    "node.ItemTransferRegionSwitcherEntry.focus.action.starting": "开始：点击仓库切换入口",
-    "node.ItemTransferRegionSwitcherEntry.focus.action.succeeded": "已点击仓库切换入口",
-    "node.ItemTransferRegionSwitcherEntry.focus.action.failed": "未能完成点击操作，点击仓库切换入口时出错",
+    "node.ItemTransferEnterRegionSwitcher.focus.recognition.starting": "开始：识别仓库切换入口",
+    "node.ItemTransferEnterRegionSwitcher.focus.recognition.succeeded": "已找到仓库切换入口",
+    "node.ItemTransferEnterRegionSwitcher.focus.recognition.failed": "找不到仓库切换入口，这可能是正常的，如果任务卡在这里，请报告错误",
+    "node.ItemTransferEnterRegionSwitcher.focus.action.starting": "开始：点击仓库切换入口",
+    "node.ItemTransferEnterRegionSwitcher.focus.action.succeeded": "已点击仓库切换入口",
+    "node.ItemTransferEnterRegionSwitcher.focus.action.failed": "未能完成点击操作，点击仓库切换入口时出错",
     "node.ItemTransferRegionSwitcherConfirm.focus.recognition.starting": "开始：识别仓库切换确认按钮",
     "node.ItemTransferRegionSwitcherConfirm.focus.recognition.succeeded": "已找到仓库切换确认按钮",
     "node.ItemTransferRegionSwitcherConfirm.focus.recognition.failed": "找不到仓库切换确认按钮，这可能是正常的，如果任务卡在这里，请报告错误",
@@ -114,11 +114,11 @@
     "node.ItemTransferClickOrigin.focus.action.starting": "开始：点击出发地仓库",
     "node.ItemTransferClickOrigin.focus.action.succeeded": "已点击出发地仓库",
     "node.ItemTransferClickOrigin.focus.action.failed": "点击出发地仓库时出错",
-    "node.ItemTransferEnsureDestination.focus.recognition.starting": "开始：确认是否处在目的地仓库",
-    "node.ItemTransferEnsureDestination.focus.recognition.succeeded": "已确认到达目标仓库",
-    "node.ItemTransferEnsureDestination.focus.recognition.failed": "似乎未到达目的地仓库",
-    "node.ItemTransferEnsureOrigin.focus.recognition.starting": "开始：确认确认是否处在出发地仓库",
-    "node.ItemTransferEnsureOrigin.focus.recognition.succeeded": "已确认到达出发地仓库",
-    "node.ItemTransferEnsureOrigin.focus.recognition.failed": "似乎未到达出发地仓库",
+    "node.ItemTransferAtDestination.focus.recognition.starting": "开始：确认是否处在目的地仓库",
+    "node.ItemTransferAtDestination.focus.recognition.succeeded": "已确认到达目标仓库",
+    "node.ItemTransferAtDestination.focus.recognition.failed": "似乎未到达目的地仓库",
+    "node.ItemTransferAtOrigin.focus.recognition.starting": "开始：确认确认是否处在出发地仓库",
+    "node.ItemTransferAtOrigin.focus.recognition.succeeded": "已确认到达出发地仓库",
+    "node.ItemTransferAtOrigin.focus.recognition.failed": "似乎未到达出发地仓库",
     "contact.file": "misc/locales/CONTACT/CONTACT.zh_cn.md"
 }
