--- a/assets/misc/locales/ja_jp.json
+++ b/assets/misc/locales/ja_jp.json
@@ -59,5 +59,9 @@
     "option.PuzzleSolverMode.cases.Single.label": "単回実行",
     "option.PuzzleSolverMode.cases.Loop.label": "繰り返し実行",
     "option.PuzzleSolverMode.cases.DryRun.label": "デモのみ",
-    "contact.file": "misc/locales/CONTACT/CONTACT.ja_jp.md"
+    "contact.file": "misc/locales/CONTACT/CONTACT.ja_jp.md",
+    "task.ClaimSimulationRewards.label": "📦模擬空間報酬自動受取",
+    "task.ClaimSimulationRewards.description": "模擬空間メニュー内で起動してください",
+    "task.ClaimSimulationRewards.error_not_found": "模擬空間が見つかりません。手動で切り替えてください。",
+    "task.ClaimSimulationRewards.success_finished": "模擬空間報酬の受取が完了しました。"
 }
