--- a/assets/misc/locales/ko_kr.json
+++ b/assets/misc/locales/ko_kr.json
@@ -59,5 +59,9 @@
     "option.PuzzleSolverMode.cases.Single.label": "단일 실행",
     "option.PuzzleSolverMode.cases.Loop.label": "반복 실행",
     "option.PuzzleSolverMode.cases.DryRun.label": "데모만",
-    "contact.file": "misc/locales/CONTACT/CONTACT.ko_kr.md"
+    "contact.file": "misc/locales/CONTACT/CONTACT.ko_kr.md",
+    "task.ClaimSimulationRewards.label": "📦시뮬레이션 공간 보상 자동 수령",
+    "task.ClaimSimulationRewards.description": "시뮬레이션 공간 메뉴 내에서 실행해 주세요",
+    "task.ClaimSimulationRewards.error_not_found": "[시뮬레이션 공간] 화면을 찾을 수 없습니다. 수동으로 전환해 주세요.",
+    "task.ClaimSimulationRewards.success_finished": "시뮬레이션 공간 보상 수령 완료."
 }
