--- a/assets/misc/locales/zh_cn.json
+++ b/assets/misc/locales/zh_cn.json
@@ -59,5 +59,9 @@
     "option.PuzzleSolverMode.cases.Single.label": "单次执行",
     "option.PuzzleSolverMode.cases.Loop.label": "重复执行",
     "option.PuzzleSolverMode.cases.DryRun.label": "仅演示",
-    "contact.file": "misc/locales/CONTACT/CONTACT.zh_cn.md"
+    "contact.file": "misc/locales/CONTACT/CONTACT.zh_cn.md",
+    "task.ClaimSimulationRewards.label": "📦自动领取模拟空间奖励",
+    "task.ClaimSimulationRewards.description": "请在模拟空间菜单内启动",
+    "task.ClaimSimulationRewards.error_not_found": "未检测到[模拟空间]界面，请手动切换",
+    "task.ClaimSimulationRewards.success_finished": "模拟空间奖励领取完毕"
 }
