--- a/assets/misc/locales/zh_tw.json
+++ b/assets/misc/locales/zh_tw.json
@@ -57,5 +57,9 @@
     "option.PuzzleSolverMode.cases.Single.label": "單次執行",
     "option.PuzzleSolverMode.cases.Loop.label": "重複執行",
     "option.PuzzleSolverMode.cases.DryRun.label": "僅演示",
-    "contact.file": "misc/locales/CONTACT/CONTACT.zh_tw.md"
+    "contact.file": "misc/locales/CONTACT/CONTACT.zh_tw.md",
+    "task.ClaimSimulationRewards.label": "📦自動領取模擬空間獎勵",
+    "task.ClaimSimulationRewards.description": "請在模擬空間選單內啟動",
+    "task.ClaimSimulationRewards.error_not_found": "未檢測到[模擬空間]介面，請手動切換",
+    "task.ClaimSimulationRewards.success_finished": "模擬空間獎勵領取完畢"
 }
