feat: ✨ 新增 🔨批量简易制作 (#234)

--- a/assets/misc/locales/en_us.json
+++ b/assets/misc/locales/en_us.json
@@ -13,6 +13,9 @@
     "task.ReceiveProdManual.description": "Claim all simple crafting manual rewards. **You can start this task from: Manual Progress / Manual List / Inventory / Navigation Menu / Main Interface.**",
     "task.BakerEntry.label": "💬 Clear Chat Messages",
     "task.BakerEntry.description": "Clear all chat messages.",
+    "task.SimpleProductionBatch.label": "🔨 Batch Simple Crafting",
+    "task.SimpleProductionBatch.description": "Perform batch simple crafting with one click. Make sure you have enough inventory space before execution. **Please select the items to craft on the Simple Crafting page before starting the script**.",
+    "task.SimpleProductionBatch.error_not_found": "**Please select the items to craft on the Simple Crafting page before starting the script**.",
     "task.ImportBluePrints.label": "📐 Import Blueprints",
     "task.ImportBluePrints.description": "Batch import blueprints with smart parsing. **Start this task from 'My Blueprints' page.**",
     "task.RealTimeTask.label": "🤖 Real-time Assist",
