--- a/assets/misc/locales/ja_jp.json
+++ b/assets/misc/locales/ja_jp.json
@@ -13,6 +13,9 @@
     "task.ReceiveProdManual.description": "すべての簡易製作手帳報酬を受け取ります。**手帳進捗/手帳リスト/バッグ画面/ナビメニュー/メイン画面からタスクを開始できます。**",
     "task.BakerEntry.label": "💬 会話メッセージ整理",
     "task.BakerEntry.description": "すべての会話メッセージを消します。",
+    "task.SimpleProductionBatch.label": "🔨 簡易制作の一括実行",
+    "task.SimpleProductionBatch.description": "ワンクリックで簡易制作を一括実行します。実行前にインベントリに十分な空きがあることを確認してください。**スクリプトを起動する前に、簡易制作画面で制作するアイテムを選択してください**",
+    "task.SimpleProductionBatch.error_not_found": "**簡易制作画面で制作するアイテムを選択してから、スクリプトを起動してください**",
     "task.ImportBluePrints.label": "📐 設計図を一括インポート",
     "task.ImportBluePrints.description": "設計図を一括でインポートします（スマート解析対応）。**「マイ設計図」ページから開始してください。**",
     "task.RealTimeTask.label": "🤖 リアルタイム支援",
