--- a/assets/misc/locales/ko_kr.json
+++ b/assets/misc/locales/ko_kr.json
@@ -13,6 +13,9 @@
     "task.ReceiveProdManual.description": "모든 간단 제작 매뉴얼 보상을 수령합니다. **매뉴얼 진행도 / 매뉴얼 목록 / 가방 화면 / 내비게이션 메뉴 / 메인 화면에서 작업을 시작할 수 있습니다.**",
     "task.BakerEntry.label": "💬 대화 메시지 정리",
     "task.BakerEntry.description": "모든 대화 메시지를 정리합니다.",
+    "task.SimpleProductionBatch.label": "🔨 간편 제작 일괄 실행",
+    "task.SimpleProductionBatch.description": "한 번의 클릭으로 간편 제작을 일괄 실행합니다. 실행 시 인벤토리에 충분한 공간이 있는지 확인하세요. **스크립트를 시작하기 전에 간편 제작 화면에서 제작할 아이템을 먼저 선택해 주세요**.",
+    "task.SimpleProductionBatch.error_not_found": "**간편 제작 화면에서 제작할 아이템을 선택한 후 스크립트를 시작해 주세요**.",
     "task.ImportBluePrints.label": "📐 청사진 일괄 가져오기",
     "task.ImportBluePrints.description": "청사진을 일괄로 가져옵니다(스마트 파싱 지원). **'내 청사진' 페이지에서 시작해 주세요.**",
     "task.RealTimeTask.label": "🤖 실시간 지원",
