--- a/assets/misc/locales/zh_cn.json
+++ b/assets/misc/locales/zh_cn.json
@@ -13,6 +13,9 @@
     "task.ReceiveProdManual.description": "领取所有简制手册奖励，**可在手册进度/手册列表/背包界面/导航菜单/主界面开始任务**",
     "task.BakerEntry.label": "💬会话消息嘴替",
     "task.BakerEntry.description": "清掉所有会话消息，聊个五毛钱的.jpg",
+    "task.SimpleProductionBatch.label": "🔨批量简易制作",
+    "task.SimpleProductionBatch.description": "一键进行批量的简易制作，执行时需要保证背包充裕。**请在简易制作页面中先选好要制作的道具再启动脚本**",
+    "task.SimpleProductionBatch.error_not_found": "**请在简易制作页面中先选好要制作的道具再启动脚本**",
     "task.ImportBluePrints.label": "📐一键导入蓝图",
     "task.ImportBluePrints.description": "一键批量导入蓝图，支持智能解析，**请在终末地我的蓝图页面开始任务**",
     "task.RealTimeTask.label": "🤖实时开荒辅助",
