--- a/assets/misc/locales/zh_tw.json
+++ b/assets/misc/locales/zh_tw.json
@@ -15,6 +15,9 @@
     "task.BakerEntry.description": "清掉所有會話訊息，聊個五毛錢的.jpg",
     "task.ImportBluePrints.label": "📐一鍵導入藍圖",
     "task.ImportBluePrints.description": "一鍵批量導入藍圖，支援智慧解析，**請在終末地我的藍圖頁面開始任務**",
+    "task.SimpleProductionBatch.label": "🔨 批量簡易製作",
+    "task.SimpleProductionBatch.description": "一鍵進行批量的簡易製作，執行時需要確保背包空間充足。**請先在簡易製作頁面中選擇要製作的道具，再啟動腳本**",
+    "task.SimpleProductionBatch.error_not_found": "**請先在簡易製作頁面中選擇要製作的道具，再啟動腳本**",
     "task.RealTimeTask.label": "🤖即時開荒輔助",
     "task.RealTimeTask.description": "該任務會一直執行，即時監控識別遊戲畫面，自動按下需要的按鍵",
     "task.AutoResell.label": "💰半自動倒賣",
