feat: 迁移旧版逻辑并新增跨区域搬运功能
- 适配新版本 UI，重构 ItemTransfer 核心配置。
- 增加 OriginRegion 和 DestinationRegion 选项，支持区域切换。
- 完成多语言国际化配置 (zh-CN, zh-TW, en-US, ja-JP, ko-KR)。
- 优化字段命名规范。

--- a/assets/misc/locales/en_us.json
+++ b/assets/misc/locales/en_us.json
@@ -1,4 +1,6 @@
 {
+    "global.region.ValleyIV": "Valley IV",
+    "global.region.Wuling": "Wuling",
     "task.AndroidOpenGame.label": "🎮 Launch Game (Android)",
     "task.AndroidOpenGame.description": "Launch the game on Android. Please open the emulator manually first.",
     "task.PCOpenGame.label": "🎮 Enter Game (PC)",
@@ -72,9 +74,27 @@
     "task.DijiangRewards.description": "Auto-collect products, restock materials, and manage Clue exchange.",
     "option.AutoStartExchange.label": "Auto Start Clue Exchange",
     "option.AutoStartExchange.description": "Automatically starts clue exchange during base tasks. It is not recommended to enable this option, as clue exchange tasks should wait for credit point transaction tasks to actively initiate in order to obtain high-value items.",
-    "contact.file": "misc/locales/CONTACT/CONTACT.en_us.md",
     "task.ClaimSimulationRewards.label": "📦Claim Simulation Rewards",
     "task.ClaimSimulationRewards.description": "Please start within the Simulation Space menu",
     "task.ClaimSimulationRewards.error_not_found": "Simulation UI not detected. Please switch manually.",
-    "task.ClaimSimulationRewards.success_finished": "Simulation  rewards claimed successfully."
+    "task.ClaimSimulationRewards.success_finished": "Simulation  rewards claimed successfully.",
+    "ItemTransfer.option.WhatToTransfer.label": "Item to Transfer",
+    "ItemTransfer.option.WhatToTransfer.input.label": "Item Name",
+    "ItemTransfer.option.WhatToTransfer.input.description": "Please enter the full name of the item.",
+    "ItemTransfer.option.OriginRegion.label": "Origin Region (Source)",
+    "ItemTransfer.option.OriginRegion.description": "The current location of the item.",
+    "ItemTransfer.option.DestinationRegion.label": "Destination Region (Target)",
+    "ItemTransfer.option.DestinationRegion.description": "Where you want to move the item to.",
+    "ItemTransfer.option.TransferringContainer.label": "Is Container?",
+    "ItemTransfer.option.TransferringContainer.description": "Enable if the item is a box/case containing other items.",
+    "ItemTransfer.option.ContainerContent.label": "Container Content",
+    "ItemTransfer.option.ContainerContent.input.label": "Content Name",
+    "ItemTransfer.option.ContainerContent.input.description": "What is inside the container?",
+    "ItemTransfer.option.TransferAll.label": "Transfer All",
+    "ItemTransfer.option.TransferAll.description": "Transfer all available items when enabled.",
+    "ItemTransfer.option.TransferTimes.label": "Transfer Times",
+    "ItemTransfer.option.TransferTimes.input.label": "Times",
+    "ItemTransfer.option.TransferTimes.input.description": "Number of times to perform the transfer.",
+    "ItemTransfer.option.TransferTimes.input.error": "Please enter an integer greater than 0.",
+    "contact.file": "misc/locales/CONTACT/CONTACT.en_us.md"
 }
