--- a/assets/misc/locales/ja_jp.json
+++ b/assets/misc/locales/ja_jp.json
@@ -1,4 +1,6 @@
 {
+    "global.region.ValleyIV": "第4谷地 (Valley IV)",
+    "global.region.Wuling": "武陵 (Wuling)",
     "task.AndroidOpenGame.label": "🎮 ゲーム起動（Android）",
     "task.AndroidOpenGame.description": "Androidでゲームを起動します。事前にエミュレーターを手動で起動してください。",
     "task.PCOpenGame.label": "🎮 ゲームに入る（PC）",
@@ -72,9 +74,27 @@
     "task.DijiangRewards.description": "製造物の回収と補給、及び手掛かりの受取・設置を自動化します。",
     "option.AutoStartExchange.label": "手がかり交換を自動開始",
     "option.AutoStartExchange.description": "基地任務中に手がかり交換を自動的に開始します。このオプションの有効化は推奨されません。高価値なアイテムを獲得するためには、手がかり交換任務はクレジット取引任務が主動的に開始するのを待つべきです。",
-    "contact.file": "misc/locales/CONTACT/CONTACT.ja_jp.md",
     "task.ClaimSimulationRewards.label": "📦模擬空間報酬自動受取",
     "task.ClaimSimulationRewards.description": "模擬空間メニュー内で起動してください",
     "task.ClaimSimulationRewards.error_not_found": "模擬空間が見つかりません。手動で切り替えてください。",
-    "task.ClaimSimulationRewards.success_finished": "模擬空間報酬の受取が完了しました。"
+    "task.ClaimSimulationRewards.success_finished": "模擬空間報酬の受取が完了しました。",
+    "ItemTransfer.option.WhatToTransfer.label": "搬送するアイテム",
+    "ItemTransfer.option.WhatToTransfer.input.label": "アイテム名",
+    "ItemTransfer.option.WhatToTransfer.input.description": "アイテムの正式名称を入力してください。",
+    "ItemTransfer.option.OriginRegion.label": "転送元エリア (Origin)",
+    "ItemTransfer.option.OriginRegion.description": "アイテムが現在保管されている倉庫エリア。",
+    "ItemTransfer.option.DestinationRegion.label": "転送先エリア (Dest.)",
+    "ItemTransfer.option.DestinationRegion.description": "アイテムを移動させたい倉庫エリア。",
+    "ItemTransfer.option.TransferringContainer.label": "コンテナですか？",
+    "ItemTransfer.option.TransferringContainer.description": "箱やケース類の場合、中身を指定する必要があります。",
+    "ItemTransfer.option.ContainerContent.label": "コンテナの中身設定",
+    "ItemTransfer.option.ContainerContent.input.label": "中身の名前",
+    "ItemTransfer.option.ContainerContent.input.description": "コンテナの中身は何ですか？",
+    "ItemTransfer.option.TransferAll.label": "すべて搬送",
+    "ItemTransfer.option.TransferAll.description": "有効にすると、そのアイテムをすべて搬送します。",
+    "ItemTransfer.option.TransferTimes.label": "搬送回数設定",
+    "ItemTransfer.option.TransferTimes.input.label": "回数",
+    "ItemTransfer.option.TransferTimes.input.description": "搬送アクションを実行する回数。",
+    "ItemTransfer.option.TransferTimes.input.error": "0より大きい整数を入力してください。",
+    "contact.file": "misc/locales/CONTACT/CONTACT.ja_jp.md"
 }
