--- a/assets/misc/locales/ko_kr.json
+++ b/assets/misc/locales/ko_kr.json
@@ -1,4 +1,6 @@
 {
+    "global.region.ValleyIV": "제4 계곡 (Valley IV)",
+    "global.region.Wuling": "무릉 (Wuling)",
     "task.AndroidOpenGame.label": "🎮 게임 실행 (Android)",
     "task.AndroidOpenGame.description": "Android에서 게임을 실행합니다. 먼저 에뮬레이터를 수동으로 실행해 주세요.",
     "task.PCOpenGame.label": "🎮 게임 진입 (PC)",
@@ -72,9 +74,27 @@
     "task.DijiangRewards.description": "기반시설 생산물 수령 및 보급, 단서 수집 및 배치 자동화",
     "option.AutoStartExchange.label": "단서 교환 자동 시작",
     "option.AutoStartExchange.description": "기반 시설 임무 진행 중 단서 교환을 자동으로 시작합니다. 이 옵션을 활성화하는 것은 권장되지 않습니다. 고가치 아이템을 획득하려면 단서 교환 임무가 크레딧 거래 임무가 활성화되기를 기다려야 합니다.",
-    "contact.file": "misc/locales/CONTACT/CONTACT.ko_kr.md",
     "task.ClaimSimulationRewards.label": "📦시뮬레이션 공간 보상 자동 수령",
     "task.ClaimSimulationRewards.description": "시뮬레이션 공간 메뉴 내에서 실행해 주세요",
     "task.ClaimSimulationRewards.error_not_found": "[시뮬레이션 공간] 화면을 찾을 수 없습니다. 수동으로 전환해 주세요.",
-    "task.ClaimSimulationRewards.success_finished": "시뮬레이션 공간 보상 수령 완료."
+    "task.ClaimSimulationRewards.success_finished": "시뮬레이션 공간 보상 수령 완료.",
+    "ItemTransfer.option.WhatToTransfer.label": "운반할 아이템",
+    "ItemTransfer.option.WhatToTransfer.input.label": "아이템 이름",
+    "ItemTransfer.option.WhatToTransfer.input.description": "아이템의 전체 이름을 입력해 주세요.",
+    "ItemTransfer.option.OriginRegion.label": "출발 지역 (Origin)",
+    "ItemTransfer.option.OriginRegion.description": "현재 아이템이 보관된 창고 구역입니다.",
+    "ItemTransfer.option.DestinationRegion.label": "도착 지역 (Dest.)",
+    "ItemTransfer.option.DestinationRegion.description": "아이템을 이동시킬 창고 구역입니다.",
+    "ItemTransfer.option.TransferringContainer.label": "컨테이너입니까?",
+    "ItemTransfer.option.TransferringContainer.description": "상자나 케이스 같은 아이템인 경우, 내용물을 지정해야 합니다.",
+    "ItemTransfer.option.ContainerContent.label": "컨테이너 내용물 설정",
+    "ItemTransfer.option.ContainerContent.input.label": "내용물 이름",
+    "ItemTransfer.option.ContainerContent.input.description": "컨테이너 안에 무엇이 들어 있습니까?",
+    "ItemTransfer.option.TransferAll.label": "모두 운반",
+    "ItemTransfer.option.TransferAll.description": "활성화하면 해당 아이템을 모두 옮깁니다.",
+    "ItemTransfer.option.TransferTimes.label": "운반 횟수 설정",
+    "ItemTransfer.option.TransferTimes.input.label": "횟수",
+    "ItemTransfer.option.TransferTimes.input.description": "운반 작업을 수행할 횟수입니다.",
+    "ItemTransfer.option.TransferTimes.input.error": "0보다 큰 정수를 입력하십시오.",
+    "contact.file": "misc/locales/CONTACT/CONTACT.ko_kr.md"
 }
