--- a/assets/misc/locales/zh_tw.json
+++ b/assets/misc/locales/zh_tw.json
@@ -1,4 +1,6 @@
 {
+    "global.region.ValleyIV": "四號谷地",
+    "global.region.Wuling": "武陵",
     "task.AndroidOpenGame.label": "🎮打開遊戲",
     "task.AndroidOpenGame.description": "安卓端打開遊戲，需先手動打開模擬器",
     "task.PCOpenGame.label": "🎮進入遊戲",
@@ -70,9 +72,27 @@
     "task.DijiangRewards.description": "自動領取基建產物並補貨，自動收發與放置線索",
     "option.AutoStartExchange.label": "自動開啟線索交流",
     "option.AutoStartExchange.description": "在基建任務過程中，自動開啟線索交流，並不推薦開啟此選項，線索交流任務應該等待信用點交易任務主動開啟以獲取高價值物品",
-    "contact.file": "misc/locales/CONTACT/CONTACT.zh_tw.md",
     "task.ClaimSimulationRewards.label": "📦自動領取模擬空間獎勵",
     "task.ClaimSimulationRewards.description": "請在模擬空間選單內啟動",
     "task.ClaimSimulationRewards.error_not_found": "未檢測到[模擬空間]介面，請手動切換",
-    "task.ClaimSimulationRewards.success_finished": "模擬空間獎勵領取完畢"
+    "task.ClaimSimulationRewards.success_finished": "模擬空間獎勵領取完畢",
+    "ItemTransfer.option.WhatToTransfer.label": "要搬運的物品",
+    "ItemTransfer.option.WhatToTransfer.input.label": "物品名稱",
+    "ItemTransfer.option.WhatToTransfer.input.description": "請輸入物品的完整名稱。",
+    "ItemTransfer.option.OriginRegion.label": "來源區域 (起點)",
+    "ItemTransfer.option.OriginRegion.description": "物品當前所在的倉庫區域。",
+    "ItemTransfer.option.DestinationRegion.label": "目標區域 (終點)",
+    "ItemTransfer.option.DestinationRegion.description": "計畫將物品轉移到的倉庫區域。",
+    "ItemTransfer.option.TransferringContainer.label": "物品是容器嗎？",
+    "ItemTransfer.option.TransferringContainer.description": "如果是箱子/盒子類物品，需要指定裡面的內容物。",
+    "ItemTransfer.option.ContainerContent.label": "容器內容物設定",
+    "ItemTransfer.option.ContainerContent.input.label": "內容物名稱",
+    "ItemTransfer.option.ContainerContent.input.description": "容器裡裝的是什麼？",
+    "ItemTransfer.option.TransferAll.label": "搬運所有",
+    "ItemTransfer.option.TransferAll.description": "開啟後將搬空該物品。",
+    "ItemTransfer.option.TransferTimes.label": "搬運次數設定",
+    "ItemTransfer.option.TransferTimes.input.label": "次數",
+    "ItemTransfer.option.TransferTimes.input.description": "執行搬運操作的次數。",
+    "ItemTransfer.option.TransferTimes.input.error": "請輸入大於0的整數。",
+    "contact.file": "misc/locales/CONTACT/CONTACT.zh_tw.md"
 }
