--- a/assets/misc/locales/zh_cn.json
+++ b/assets/misc/locales/zh_cn.json
@@ -1,6 +1,6 @@
 {
-    "common.in-game.region.valley": "四号谷地",
-    "common.in-game.region.wuling": "武陵",
+    "global.region.ValleyIV": "四号谷地",
+    "global.region.Wuling": "武陵",
     "task.AndroidOpenGame.label": "🎮打开游戏",
     "task.AndroidOpenGame.description": "安卓端打开游戏，需先手动打开模拟器",
     "task.PCOpenGame.label": "🎮进入游戏",
@@ -80,20 +80,6 @@
     "task.ClaimSimulationRewards.success_finished": "模拟空间奖励领取完毕",
     "task.ItemTransfer.label": "🐌库存转移",
     "task.ItemTransfer.description": "将指定物品在不同地区之间批量切换。**请在帝江号仓库页面开始任务**",
-    "option.WhatToTransfer.label": "物品设置",
-    "option.WhatToTransfer.input.label": "待转移物品",
-    "option.TransferringContainer.label": "液体容器",
-    "option.TransferringContainer.description": "待转移物品是否是含液态息壤的蓝铁瓶等已盛装液体的容器",
-    "option.ContainerContent.label": "内容物设置",
-    "option.ContainerContent.input.label": "内容物",
-    "option.ContainerContent.input.description": "待转移容器内的内容物名称",
-    "option.TransferOrigin.label": "起点",
-    "option.TransferDestination.label": "终点",
-    "option.TransferAll.label": "手动停止",
-    "option.TransferAll.description": "不设置自动停止次数，直到搬空或不满一背包为止",
-    "option.TransferTimes.label": "次数设置",
-    "option.TransferTimes.input.label": "转移次数",
-    "option.TransferTimes.input.description": "“批量转移同类物品”填满背包的次数",
     "option.TransferTimes.input.error": "请输入非负整数",
     "node.ItemTransferToBackpack.focus.recognition.starting": "开始：从仓库中查找指定物品",
     "node.ItemTransferToBackpack.focus.recognition.succeeded": "已找到指定物品的位置",
@@ -137,5 +123,23 @@
     "node.ItemTransferAtOrigin.focus.recognition.starting": "开始：确认确认是否处在出发地仓库",
     "node.ItemTransferAtOrigin.focus.recognition.succeeded": "已确认到达出发地仓库",
     "node.ItemTransferAtOrigin.focus.recognition.failed": "似乎未到达出发地仓库",
+    "ItemTransfer.option.WhatToTransfer.label": "要搬运的物品",
+    "ItemTransfer.option.WhatToTransfer.input.label": "物品名称",
+    "ItemTransfer.option.WhatToTransfer.input.description": "请输入物品的完整名称。",
+    "ItemTransfer.option.OriginRegion.label": "来源区域 (起点)",
+    "ItemTransfer.option.OriginRegion.description": "物品当前所在的仓库区域。",
+    "ItemTransfer.option.DestinationRegion.label": "目标区域 (终点)",
+    "ItemTransfer.option.DestinationRegion.description": "计划将物品转移到的仓库区域。",
+    "ItemTransfer.option.TransferringContainer.label": "物品是容器吗？",
+    "ItemTransfer.option.TransferringContainer.description": "如果是箱子/盒子类物品，需要指定里面的内容物。",
+    "ItemTransfer.option.ContainerContent.label": "容器内容物设置",
+    "ItemTransfer.option.ContainerContent.input.label": "内容物名称",
+    "ItemTransfer.option.ContainerContent.input.description": "容器里装的是什么？",
+    "ItemTransfer.option.TransferAll.label": "搬运所有",
+    "ItemTransfer.option.TransferAll.description": "开启后将搬空该物品。",
+    "ItemTransfer.option.TransferTimes.label": "搬运次数设置",
+    "ItemTransfer.option.TransferTimes.input.label": "次数",
+    "ItemTransfer.option.TransferTimes.input.description": "执行搬运操作的次数。",
+    "ItemTransfer.option.TransferTimes.input.error": "请输入大于0的整数。",
     "contact.file": "misc/locales/CONTACT/CONTACT.zh_cn.md"
 }
