feat: 实装核心Go逻辑、次数限制及初始化流程
1. **Go后端逻辑**：
   - 实装 `TransferSession` 用于状态记忆（坐标缓存与计数）。
   - 新增 `TransferLimitChecker` 接口，实现 `MaxTimes` 次数限制与任务自动终结逻辑。
   - 优化识别算法，采用线性循环扫描 (Linear Circular Scan) 提升二次识别效率。
   - 修复参数解析中的类型断言问题。

2. **流水线配置**：
   - 新增初始化序列，确保在正确的区域启动任务。
   - 挂载 `ItemTransferLimitSentinel` 哨兵节点，实现任务流的优雅退出。

3. **国际化**：
   - 补全五国语言 (CN/TW/EN/JP/KR) 的 i18n 配置。

--- a/assets/misc/locales/ja_jp.json
+++ b/assets/misc/locales/ja_jp.json
@@ -78,23 +78,26 @@
     "task.ClaimSimulationRewards.description": "模擬空間メニュー内で起動してください",
     "task.ClaimSimulationRewards.error_not_found": "模擬空間が見つかりません。手動で切り替えてください。",
     "task.ClaimSimulationRewards.success_finished": "模擬空間報酬の受取が完了しました。",
+    "task.ItemTransfer.label": "アイテム搬送",
+    "task.ItemTransfer.description": "異なるエリアの倉庫間で指定された資材を自動的に搬送します。",
     "ItemTransfer.option.WhatToTransfer.label": "搬送するアイテム",
     "ItemTransfer.option.WhatToTransfer.input.label": "アイテム名",
     "ItemTransfer.option.WhatToTransfer.input.description": "アイテムの正式名称を入力してください。",
-    "ItemTransfer.option.OriginRegion.label": "転送元エリア (Origin)",
+    "ItemTransfer.option.OriginRegion.label": "出発エリア (起点)",
     "ItemTransfer.option.OriginRegion.description": "アイテムが現在保管されている倉庫エリア。",
-    "ItemTransfer.option.DestinationRegion.label": "転送先エリア (Dest.)",
-    "ItemTransfer.option.DestinationRegion.description": "アイテムを移動させたい倉庫エリア。",
-    "ItemTransfer.option.TransferringContainer.label": "コンテナですか？",
-    "ItemTransfer.option.TransferringContainer.description": "箱やケース類の場合、中身を指定する必要があります。",
-    "ItemTransfer.option.ContainerContent.label": "コンテナの中身設定",
-    "ItemTransfer.option.ContainerContent.input.label": "中身の名前",
-    "ItemTransfer.option.ContainerContent.input.description": "コンテナの中身は何ですか？",
-    "ItemTransfer.option.TransferAll.label": "すべて搬送",
-    "ItemTransfer.option.TransferAll.description": "有効にすると、そのアイテムをすべて搬送します。",
+    "ItemTransfer.option.DestinationRegion.label": "到着エリア (終点)",
+    "ItemTransfer.option.DestinationRegion.description": "アイテムの移動先となる倉庫エリア。",
+    "ItemTransfer.option.TransferAll.label": "全量搬送",
+    "ItemTransfer.option.TransferAll.description": "有効にすると、在庫がなくなるまで搬送し続けます。",
     "ItemTransfer.option.TransferTimes.label": "搬送回数設定",
     "ItemTransfer.option.TransferTimes.input.label": "回数",
-    "ItemTransfer.option.TransferTimes.input.description": "搬送アクションを実行する回数。",
+    "ItemTransfer.option.TransferTimes.input.description": "搬送操作を実行する回数。",
     "ItemTransfer.option.TransferTimes.input.error": "0より大きい整数を入力してください。",
+    "ItemTransfer.focus.SuccessMsg": "任務完了：{item} を {count} 回搬送しました。",
+    "ItemTransfer.item.MidBattery": "中容量谷地バッテリー",
+    "ItemTransfer.item.HighBattery": "高容量谷地バッテリー",
+    "ItemTransfer.item.BlueIronOre": "藍鉄鉱",
+    "ItemTransfer.item.OriginOre": "源鉱",
+    "ItemTransfer.item.SandLeaf": "砂葉",
     "contact.file": "misc/locales/CONTACT/CONTACT.ja_jp.md"
 }
