--- a/assets/misc/locales/ko_kr.json
+++ b/assets/misc/locales/ko_kr.json
@@ -78,23 +78,26 @@
     "task.ClaimSimulationRewards.description": "시뮬레이션 공간 메뉴 내에서 실행해 주세요",
     "task.ClaimSimulationRewards.error_not_found": "[시뮬레이션 공간] 화면을 찾을 수 없습니다. 수동으로 전환해 주세요.",
     "task.ClaimSimulationRewards.success_finished": "시뮬레이션 공간 보상 수령 완료.",
-    "ItemTransfer.option.WhatToTransfer.label": "운반할 아이템",
+    "task.ItemTransfer.label": "아이템 운송",
+    "task.ItemTransfer.description": "서로 다른 구역의 창고 간에 지정된 자원을 자동으로 운송합니다.",
+    "ItemTransfer.option.WhatToTransfer.label": "운송할 아이템",
     "ItemTransfer.option.WhatToTransfer.input.label": "아이템 이름",
-    "ItemTransfer.option.WhatToTransfer.input.description": "아이템의 전체 이름을 입력해 주세요.",
-    "ItemTransfer.option.OriginRegion.label": "출발 지역 (Origin)",
+    "ItemTransfer.option.WhatToTransfer.input.description": "아이템의 전체 이름을 입력하세요.",
+    "ItemTransfer.option.OriginRegion.label": "출발 구역 (기점)",
     "ItemTransfer.option.OriginRegion.description": "현재 아이템이 보관된 창고 구역입니다.",
-    "ItemTransfer.option.DestinationRegion.label": "도착 지역 (Dest.)",
+    "ItemTransfer.option.DestinationRegion.label": "도착 구역 (종점)",
     "ItemTransfer.option.DestinationRegion.description": "아이템을 이동시킬 창고 구역입니다.",
-    "ItemTransfer.option.TransferringContainer.label": "컨테이너입니까?",
-    "ItemTransfer.option.TransferringContainer.description": "상자나 케이스 같은 아이템인 경우, 내용물을 지정해야 합니다.",
-    "ItemTransfer.option.ContainerContent.label": "컨테이너 내용물 설정",
-    "ItemTransfer.option.ContainerContent.input.label": "내용물 이름",
-    "ItemTransfer.option.ContainerContent.input.description": "컨테이너 안에 무엇이 들어 있습니까?",
-    "ItemTransfer.option.TransferAll.label": "모두 운반",
-    "ItemTransfer.option.TransferAll.description": "활성화하면 해당 아이템을 모두 옮깁니다.",
-    "ItemTransfer.option.TransferTimes.label": "운반 횟수 설정",
+    "ItemTransfer.option.TransferAll.label": "모두 운송",
+    "ItemTransfer.option.TransferAll.description": "활성화하면 해당 아이템을 모두 비울 때까지 운송합니다.",
+    "ItemTransfer.option.TransferTimes.label": "운송 횟수 설정",
     "ItemTransfer.option.TransferTimes.input.label": "횟수",
-    "ItemTransfer.option.TransferTimes.input.description": "운반 작업을 수행할 횟수입니다.",
-    "ItemTransfer.option.TransferTimes.input.error": "0보다 큰 정수를 입력하십시오.",
+    "ItemTransfer.option.TransferTimes.input.description": "운송 작업을 수행할 횟수입니다.",
+    "ItemTransfer.option.TransferTimes.input.error": "0보다 큰 정수를 입력하세요.",
+    "ItemTransfer.focus.SuccessMsg": "임무 완료: {item}을(를) {count}회 운송했습니다.",
+    "ItemTransfer.item.MidBattery": "중용량 밸리 배터리",
+    "ItemTransfer.item.HighBattery": "고용량 밸리 배터리",
+    "ItemTransfer.item.BlueIronOre": "남철광",
+    "ItemTransfer.item.OriginOre": "원광",
+    "ItemTransfer.item.SandLeaf": "사엽",
     "contact.file": "misc/locales/CONTACT/CONTACT.ko_kr.md"
 }
