--- a/assets/misc/locales/zh_tw.json
+++ b/assets/misc/locales/zh_tw.json
@@ -76,6 +76,8 @@
     "task.ClaimSimulationRewards.description": "請在模擬空間選單內啟動",
     "task.ClaimSimulationRewards.error_not_found": "未檢測到[模擬空間]介面，請手動切換",
     "task.ClaimSimulationRewards.success_finished": "模擬空間獎勵領取完畢",
+    "task.ItemTransfer.label": "物品搬運",
+    "task.ItemTransfer.description": "自動在不同區域的倉庫之間搬運指定資源。",
     "ItemTransfer.option.WhatToTransfer.label": "要搬運的物品",
     "ItemTransfer.option.WhatToTransfer.input.label": "物品名稱",
     "ItemTransfer.option.WhatToTransfer.input.description": "請輸入物品的完整名稱。",
@@ -83,16 +85,17 @@
     "ItemTransfer.option.OriginRegion.description": "物品當前所在的倉庫區域。",
     "ItemTransfer.option.DestinationRegion.label": "目標區域 (終點)",
     "ItemTransfer.option.DestinationRegion.description": "計畫將物品轉移到的倉庫區域。",
-    "ItemTransfer.option.TransferringContainer.label": "物品是容器嗎？",
-    "ItemTransfer.option.TransferringContainer.description": "如果是箱子/盒子類物品，需要指定裡面的內容物。",
-    "ItemTransfer.option.ContainerContent.label": "容器內容物設定",
-    "ItemTransfer.option.ContainerContent.input.label": "內容物名稱",
-    "ItemTransfer.option.ContainerContent.input.description": "容器裡裝的是什麼？",
     "ItemTransfer.option.TransferAll.label": "搬運所有",
     "ItemTransfer.option.TransferAll.description": "開啟後將搬空該物品。",
     "ItemTransfer.option.TransferTimes.label": "搬運次數設定",
     "ItemTransfer.option.TransferTimes.input.label": "次數",
     "ItemTransfer.option.TransferTimes.input.description": "執行搬運操作的次數。",
     "ItemTransfer.option.TransferTimes.input.error": "請輸入大於0的整數。",
+    "ItemTransfer.focus.SuccessMsg": "任務完成：已成功搬運 {count} 次 {item}",
+    "ItemTransfer.item.MidBattery": "中容量谷地電池",
+    "ItemTransfer.item.HighBattery": "高容量谷地電池",
+    "ItemTransfer.item.BlueIronOre": "藍鐵礦",
+    "ItemTransfer.item.OriginOre": "源礦",
+    "ItemTransfer.item.SandLeaf": "砂葉",
     "contact.file": "misc/locales/CONTACT/CONTACT.zh_tw.md"
 }
