--- a/assets/misc/locales/en_us.json
+++ b/assets/misc/locales/en_us.json
@@ -78,23 +78,26 @@
     "task.ClaimSimulationRewards.description": "Please start within the Simulation Space menu",
     "task.ClaimSimulationRewards.error_not_found": "Simulation UI not detected. Please switch manually.",
     "task.ClaimSimulationRewards.success_finished": "Simulation  rewards claimed successfully.",
+    "task.ItemTransfer.label": "Item Transfer",
+    "task.ItemTransfer.description": "Automatically transfer specific resources between different warehouse regions.",
     "ItemTransfer.option.WhatToTransfer.label": "Item to Transfer",
     "ItemTransfer.option.WhatToTransfer.input.label": "Item Name",
     "ItemTransfer.option.WhatToTransfer.input.description": "Please enter the full name of the item.",
-    "ItemTransfer.option.OriginRegion.label": "Origin Region (Source)",
-    "ItemTransfer.option.OriginRegion.description": "The current location of the item.",
-    "ItemTransfer.option.DestinationRegion.label": "Destination Region (Target)",
-    "ItemTransfer.option.DestinationRegion.description": "Where you want to move the item to.",
-    "ItemTransfer.option.TransferringContainer.label": "Is Container?",
-    "ItemTransfer.option.TransferringContainer.description": "Enable if the item is a box/case containing other items.",
-    "ItemTransfer.option.ContainerContent.label": "Container Content",
-    "ItemTransfer.option.ContainerContent.input.label": "Content Name",
-    "ItemTransfer.option.ContainerContent.input.description": "What is inside the container?",
+    "ItemTransfer.option.OriginRegion.label": "Source Region (Origin)",
+    "ItemTransfer.option.OriginRegion.description": "The warehouse region where the item is currently located.",
+    "ItemTransfer.option.DestinationRegion.label": "Destination Region",
+    "ItemTransfer.option.DestinationRegion.description": "The warehouse region where the item will be moved to.",
     "ItemTransfer.option.TransferAll.label": "Transfer All",
-    "ItemTransfer.option.TransferAll.description": "Transfer all available items when enabled.",
-    "ItemTransfer.option.TransferTimes.label": "Transfer Times",
-    "ItemTransfer.option.TransferTimes.input.label": "Times",
-    "ItemTransfer.option.TransferTimes.input.description": "Number of times to perform the transfer.",
+    "ItemTransfer.option.TransferAll.description": "Enable to transfer all available items until empty.",
+    "ItemTransfer.option.TransferTimes.label": "Transfer Count Settings",
+    "ItemTransfer.option.TransferTimes.input.label": "Count",
+    "ItemTransfer.option.TransferTimes.input.description": "The number of times to perform the transfer operation.",
     "ItemTransfer.option.TransferTimes.input.error": "Please enter an integer greater than 0.",
+    "ItemTransfer.focus.SuccessMsg": "Task Completed: Successfully transferred {item} {count} times.",
+    "ItemTransfer.item.MidBattery": "SC Valley Battery",
+    "ItemTransfer.item.HighBattery": "HC Valley Battery",
+    "ItemTransfer.item.BlueIronOre": "Ferrium Ore",
+    "ItemTransfer.item.OriginOre": "Originium Ore",
+    "ItemTransfer.item.SandLeaf": "Sandleaf",
     "contact.file": "misc/locales/CONTACT/CONTACT.en_us.md"
 }
