--- a/assets/misc/locales/zh_cn.json
+++ b/assets/misc/locales/zh_cn.json
@@ -81,48 +81,6 @@
     "task.ItemTransfer.label": "🐌库存转移",
     "task.ItemTransfer.description": "将指定物品在不同地区之间批量切换。**请在帝江号仓库页面开始任务**",
     "option.TransferTimes.input.error": "请输入非负整数",
-    "node.ItemTransferToBackpack.focus.recognition.starting": "开始：从仓库中查找指定物品",
-    "node.ItemTransferToBackpack.focus.recognition.succeeded": "已找到指定物品的位置",
-    "node.ItemTransferToBackpack.focus.recognition.failed": "从仓库中查找物品时出错。可能是未找到指定物品",
-    "node.ItemTransferToBackpack.focus.action.starting": "开始：批量移动到背包",
-    "node.ItemTransferToBackpack.focus.action.succeeded": "完成：批量移动到背包",
-    "node.ItemTransferToBackpack.focus.action.failed": "未能完成批量移动，批量移动到背包出错",
-    "node.ItemTransferEnterRegionSwitcher.focus.recognition.starting": "开始：识别仓库切换入口",
-    "node.ItemTransferEnterRegionSwitcher.focus.recognition.succeeded": "已找到仓库切换入口",
-    "node.ItemTransferEnterRegionSwitcher.focus.recognition.failed": "找不到仓库切换入口，这可能是正常的，如果任务卡在这里，请报告错误",
-    "node.ItemTransferEnterRegionSwitcher.focus.action.starting": "开始：点击仓库切换入口",
-    "node.ItemTransferEnterRegionSwitcher.focus.action.succeeded": "已点击仓库切换入口",
-    "node.ItemTransferEnterRegionSwitcher.focus.action.failed": "未能完成点击操作，点击仓库切换入口时出错",
-    "node.ItemTransferRegionSwitcherConfirm.focus.recognition.starting": "开始：识别仓库切换确认按钮",
-    "node.ItemTransferRegionSwitcherConfirm.focus.recognition.succeeded": "已找到仓库切换确认按钮",
-    "node.ItemTransferRegionSwitcherConfirm.focus.recognition.failed": "找不到仓库切换确认按钮，这可能是正常的，如果任务卡在这里，请报告错误",
-    "node.ItemTransferRegionSwitcherConfirm.focus.action.starting": "开始：点击确认键",
-    "node.ItemTransferRegionSwitcherConfirm.focus.action.succeeded": "已点击确认键",
-    "node.ItemTransferRegionSwitcherConfirm.focus.action.failed": "未能完成点击操作，确认切换仓库时出错",
-    "node.ItemTransferCloseRegionSwitcher.focus.recognition.starting": "开始：确认是否已完成仓库切换",
-    "node.ItemTransferCloseRegionSwitcher.focus.recognition.succeeded": "已完成仓库切换",
-    "node.ItemTransferCloseRegionSwitcher.focus.recognition.failed": "仓库切换未完成，将继续等待",
-    "node.ItemTransferCloseRegionSwitcher.focus.action.starting": "开始退出仓库切换页面",
-    "node.ItemTransferCloseRegionSwitcher.focus.action.succeeded": "已退出仓库切换页面",
-    "node.ItemTransferCloseRegionSwitcher.focus.action.failed": "未能完成按键操作，退出仓库切换页面时出错",
-    "node.ItemTransferClickDestination.focus.recognition.starting": "开始：识别目的地仓库切换键",
-    "node.ItemTransferClickDestination.focus.recognition.succeeded": "已找到目的地仓库",
-    "node.ItemTransferClickDestination.focus.recognition.failed": "未找到目的地仓库",
-    "node.ItemTransferClickDestination.focus.action.starting": "开始：点击目的地仓库",
-    "node.ItemTransferClickDestination.focus.action.succeeded": "已点击目的地仓库",
-    "node.ItemTransferClickDestination.focus.action.failed": "点击目的地仓库时出错",
-    "node.ItemTransferClickOrigin.focus.recognition.starting": "开始：识别出发地仓库切换键",
-    "node.ItemTransferClickOrigin.focus.recognition.succeeded": "已找到出发地仓库",
-    "node.ItemTransferClickOrigin.focus.recognition.failed": "未找到出发地仓库",
-    "node.ItemTransferClickOrigin.focus.action.starting": "开始：点击出发地仓库",
-    "node.ItemTransferClickOrigin.focus.action.succeeded": "已点击出发地仓库",
-    "node.ItemTransferClickOrigin.focus.action.failed": "点击出发地仓库时出错",
-    "node.ItemTransferAtDestination.focus.recognition.starting": "开始：确认是否处在目的地仓库",
-    "node.ItemTransferAtDestination.focus.recognition.succeeded": "已确认到达目标仓库",
-    "node.ItemTransferAtDestination.focus.recognition.failed": "似乎未到达目的地仓库",
-    "node.ItemTransferAtOrigin.focus.recognition.starting": "开始：确认确认是否处在出发地仓库",
-    "node.ItemTransferAtOrigin.focus.recognition.succeeded": "已确认到达出发地仓库",
-    "node.ItemTransferAtOrigin.focus.recognition.failed": "似乎未到达出发地仓库",
     "ItemTransfer.option.WhatToTransfer.label": "要搬运的物品",
     "ItemTransfer.option.WhatToTransfer.input.label": "物品名称",
     "ItemTransfer.option.WhatToTransfer.input.description": "请输入物品的完整名称。",
@@ -130,16 +88,17 @@
     "ItemTransfer.option.OriginRegion.description": "物品当前所在的仓库区域。",
     "ItemTransfer.option.DestinationRegion.label": "目标区域 (终点)",
     "ItemTransfer.option.DestinationRegion.description": "计划将物品转移到的仓库区域。",
-    "ItemTransfer.option.TransferringContainer.label": "物品是容器吗？",
-    "ItemTransfer.option.TransferringContainer.description": "如果是箱子/盒子类物品，需要指定里面的内容物。",
-    "ItemTransfer.option.ContainerContent.label": "容器内容物设置",
-    "ItemTransfer.option.ContainerContent.input.label": "内容物名称",
-    "ItemTransfer.option.ContainerContent.input.description": "容器里装的是什么？",
     "ItemTransfer.option.TransferAll.label": "搬运所有",
     "ItemTransfer.option.TransferAll.description": "开启后将搬空该物品。",
     "ItemTransfer.option.TransferTimes.label": "搬运次数设置",
     "ItemTransfer.option.TransferTimes.input.label": "次数",
     "ItemTransfer.option.TransferTimes.input.description": "执行搬运操作的次数。",
     "ItemTransfer.option.TransferTimes.input.error": "请输入大于0的整数。",
+    "ItemTransfer.focus.SuccessMsg": "任务完成：已成功搬运 {count} 次 {item}",
+    "ItemTransfer.item.MidBattery": "中容谷地电池",
+    "ItemTransfer.item.HighBattery": "高容谷地电池",
+    "ItemTransfer.item.BlueIronOre": "蓝铁矿",
+    "ItemTransfer.item.OriginOre": "源矿",
+    "ItemTransfer.item.SandLeaf": "砂叶",
     "contact.file": "misc/locales/CONTACT/CONTACT.zh_cn.md"
 }
