feat(controller): add Win32 background controller modes (#602)
Add Win32-Background and Win32-Window-Background controllers using
SendMessageWithWindowPos for mouse/keyboard input, enabling background
operation without requiring the game window to be in the foreground.

- Win32-Background: uses FramePool screencap
- Win32-Window-Background: uses PrintWindow screencap
- Update all task definitions to support the new controllers
- Add localized labels for en, ja, ko, zh_cn, zh_tw

## Summary by Sourcery

添加新的 Win32 后台输入控制器模式，并更新任务和 UI 标签以支持这些模式。

新功能：
- 引入 **Win32-Background** 控制器模式，使用基于 FramePool 的屏幕捕获来实现后台鼠标和键盘输入。
- 引入 **Win32-Window-Background** 控制器模式，使用基于 PrintWindow
的屏幕捕获来实现后台鼠标和键盘输入。

增强内容：
- 更新所有任务配置，以便可以选择新的 Win32 后台控制器模式。
- 扩展界面配置和本地化资源，在受支持的语言中于 UI 中展示新的控制器模式。

<details>
<summary>Original summary in English</summary>

## Summary by Sourcery

Add new Win32 background input controller modes and update tasks and UI
labels to support them.

New Features:
- Introduce Win32-Background controller mode using FramePool-based
screen capture for background mouse and keyboard input.
- Introduce Win32-Window-Background controller mode using
PrintWindow-based screen capture for background mouse and keyboard
input.

Enhancements:
- Update all task configurations to allow selection of the new Win32
background controller modes.
- Extend interface configuration and localized resources to expose the
new controller modes in the UI across supported languages.

</details>

---------

Co-authored-by: CatGoldenglow <101938650+CatGoldenglow@users.noreply.github.com>

--- a/assets/misc/locales/en_us.json
+++ b/assets/misc/locales/en_us.json
@@ -229,6 +229,8 @@
     "controller.Win32.label": "PC",
     "controller.Win32-Window.label": "PC-Fallback",
     "controller.Win32-Front.label": "PC-Foreground",
+    "controller.Win32-Background.label": "PC-Background",
+    "controller.Win32-Window-Background.label": "PC-Fallback-Background",
     "controller.ADB.label": "Android",
     "contact.file": "misc/locales/CONTACT/CONTACT.en_us.md",
     "operator.Perlica": "Perlica",
