--- a/assets/misc/locales/zh_tw.json
+++ b/assets/misc/locales/zh_tw.json
@@ -141,6 +141,8 @@
     "controller.Win32.label": "電腦端",
     "controller.Win32-Window.label": "電腦端-備選",
     "controller.Win32-Front.label": "電腦端-前台",
+    "controller.Win32-Background.label": "電腦端-後台",
+    "controller.Win32-Window-Background.label": "電腦端-備選-後台",
     "controller.ADB.label": "安卓端",
     "task.ItemTransfer.label": "🐌庫存轉移",
     "task.ItemTransfer.description": "將指定物品在不同地區之間批量切換。請在帝江號找到靜態深色背景後開始任務。",
