--- a/assets/misc/locales/ja_jp.json
+++ b/assets/misc/locales/ja_jp.json
@@ -229,6 +229,8 @@
     "controller.Win32.label": "PC",
     "controller.Win32-Window.label": "PC-代替",
     "controller.Win32-Front.label": "PC-前面",
+    "controller.Win32-Background.label": "PC-バックグラウンド",
+    "controller.Win32-Window-Background.label": "PC-代替-バックグラウンド",
     "controller.ADB.label": "Android",
     "contact.file": "misc/locales/CONTACT/CONTACT.ja_jp.md",
     "operator.Perlica": "ペリカ",
